@@ -35,3 +35,4 @@
   9-Mar-2022    V0.42 Fix issue related to V0.41 update to Scop2 provider
   6-Jan-2023    V0.43 Configuration changes to support tox 4
  18-Apr-2023    V0.44 Fix Ecod and Scop2 provider fall-back file import
+ 18-Jul-2023    V0.45 Resolve duplication issues with Scop2 families list
